google: Split conversion functions from Google backend into a util lib

This is step 1 of the plan to add unit tests for the Google backend. This
is necessary to try and prevent regressions on the tangle of GData–vCard
conversion code which the backend is built around.

This was prompted by https://bugzilla.gnome.org/show_bug.cgi?id=675712.